fix: calendar days background contrast

--- a/src/styles/other_pages/_in-person-course.scss
+++ b/src/styles/other_pages/_in-person-course.scss
@@ -229,9 +229,9 @@
           .flatpickr-day {
             color: #31364e;
             font-size: 14px;
-            background: #f7f7f7;
+            background: #fff0e0;
             border-radius: 20px;
-            border-color: #f7f7f7;
+            border-color: #fff0e0;
             height: 56px;
             width: auto;
             max-width: unset;
